Name: LibClang
Cabal-version: >= 1.18
Version: 3.4.0
Author: Chetan Taralekar <chetant@gmail.com>
Maintainer: Chetan Taralekar <chetant@gmail.com>, Seth Fowler <mark.seth.fowler@gmail.com>
Homepage: https://github.com/chetant/LibClang/issues
License: BSD3
License-file: LICENSE
Synopsis: Haskell bindings for libclang (a C++ parsing library)
Description:
  LibClang package provides bindings to libclang.
  .
  This should be enough for parsing C/C++ code, walking the AST and querying nodes and completion queries.
  .
  * NOTE: this library comes with llvm and clang included, so build times will be higher than most packages
  .
  Please use <https://github.com/chetant/LibClang/issues> to report bugs

Category: Language
Build-type: Custom
Data-Files: build/out/lib/clang/3.4/include/*.h ,
            build/out/lib/clang/3.4/include/*.map
Extra-Source-Files: test/*.hs, test/*.c, test/runTest.sh
                    -- @INSERT_SRC llvm
Source-Repository head
  type: git
  location: git://github.com/chetant/LibClang.git

Flag preferlibcpp
  description: Prefer building with libc++
  default: False

Flag preferlibstdcpp
  description: Prefer building with libstdc++ (takes precedence over PreferLibCPP)
  default: False

Library
  ghc-options:     -Wall -funbox-strict-fields -O
  build-depends:   base < 5,
                   bytestring,
                   filepath,
                   greencard >= 3.0.4.1,
                   hashable >= 1.1.2.5 && < 1.2,
                   mtl,
                   resourcet,
                   text,
                   time,
                   transformers,
                   transformers-base,
                   vector
  hs-source-dirs:  src
  c-sources:       src/Clang/Internal/FFI_stub_ffi.c,
                   cbits/visitors.c
  include-dirs:    cbits
  exposed-modules: Clang,
                   Clang.Completion,
                   Clang.CrossReference,
                   Clang.Cursor,
                   Clang.Debug,
                   Clang.Diagnostic,
                   Clang.File,
                   Clang.Monad,
                   Clang.Source,
                   Clang.String,
                   Clang.Token,
                   Clang.TranslationUnit,
                   Clang.Traversal,
                   Clang.Type
  other-modules: Clang.Internal.BitFlags,
                 Clang.Internal.Monad,
                 Clang.Internal.FFI,
                 Clang.Internal.FFIConstants,
                 Paths_LibClang
  default-language: Haskell2010
