Name: LibClang
Cabal-version: >= 1.18
Version: 3.4.0
Author: Chetan Taralekar <chetant@gmail.com>
Maintainer: Chetan Taralekar <chetant@gmail.com>, Seth Fowler <mark.seth.fowler@gmail.com>
Homepage: https://github.com/chetant/LibClang/issues
License: BSD3
License-file: LICENSE
Synopsis: Haskell bindings for libclang (a C++ parsing library)
Description:
  LibClang package provides bindings to libclang.
  .
  This should be enough for parsing C/C++ code, walking the AST and querying nodes and completion queries.
  .
  * NOTE: this library comes with llvm and clang included, so build times will be higher than most packages
  .
  Please use <https://github.com/chetant/LibClang/issues> to report bugs

Category: Language
Build-type: Custom
Data-Files: build/out/lib/clang/3.4/include/*.h ,
            build/out/lib/clang/3.4/include/*.map
Extra-Source-Files: cbits/utils.h, cbits/visitors.h, cbits/wrappers.h,
                    test/*.hs, test/*.c, test/runTest.sh
                    -- @INSERT_SRC llvm
Source-Repository head
  type: git
  location: git://github.com/chetant/LibClang.git

Flag preferlibcpp
  description: Prefer building with libc++
  default: False

Flag preferlibstdcpp
  description: Prefer building with libstdc++ (takes precedence over PreferLibCPP)
  default: False

Library
  ghc-options:     -Wall -funbox-strict-fields
  build-tools:     c2hs >= 0.26.2
  build-depends:   base >= 4.6 && < 5,
                   bytestring >= 0.10 && < 0.11,
                   filepath >= 1.3 && < 1.5,
                   hashable >= 1.2 && < 1.3,
                   mtl >= 2.1 && < 2.3,
                   resourcet >= 1.1 && < 1.2,
                   text >= 1.1 && < 1.3,
                   time >= 1.4 && < 1.6,
                   transformers >= 0.3,
                   transformers-base >= 0.4 && < 0.5,
                   vector >= 0.10 && < 0.11
  hs-source-dirs:  src
  c-sources:       cbits/utils.c,
                   cbits/visitors.c,
                   cbits/wrappers.c
  include-dirs:    cbits
  exposed-modules: Clang,
                   Clang.Comment,
                   Clang.Completion,
                   Clang.Cursor,
                   Clang.Debug,
                   Clang.Diagnostic,
                   Clang.File,
                   Clang.Location,
                   Clang.Index,
                   Clang.Module,
                   Clang.Range,
                   Clang.Remapping,
                   Clang.String,
                   Clang.Token,
                   Clang.TranslationUnit,
                   Clang.Type,
                   Clang.UnsavedFile,
                   Clang.USR,
                   Clang.Version
  other-modules: Clang.Internal.BitFlags,
                 Clang.Internal.Comment,
                 Clang.Internal.Monad,
                 Clang.Internal.FFI,
                 Clang.Internal.FFIConstants,
                 Paths_LibClang
  default-language: Haskell2010
  extra-libraries: ncurses
