Name: LibClang
Cabal-version: >= 1.18
Version: 3.8.0
Author: Chetan Taralekar <chetant@gmail.com>
Maintainer: Chetan Taralekar <chetant@gmail.com>, Seth Fowler <mark.seth.fowler@gmail.com>
Homepage: https://github.com/chetant/LibClang
License: BSD3
License-file: LICENSE
Synopsis: Haskell bindings for libclang (a C++ parsing library)
Description:
  LibClang package provides bindings to libclang.
  .
  This should be enough for parsing C/C++ code, walking the AST and querying nodes and completion queries.
  .
  * NOTE: This version is set to build against llvm 3.8.0
  .
  Please use <https://github.com/chetant/LibClang/issues> to report bugs

Category: Language
Tested-With: GHC == 7.8.4
           , GHC == 7.10.3
           , GHC == 8.0.2
Build-type: Custom
Extra-Source-Files: cbits/utils.h, cbits/visitors.h, cbits/wrappers.h,
                    test/*.hs, test/*.c, test/runTest.sh, test/Makefile
Source-Repository head
  type: git
  location: git://github.com/chetant/LibClang.git

Library
  ghc-options:     -Wall -funbox-strict-fields
  build-tools:     c2hs >= 0.28.1
  build-depends:   base >= 4.6 && < 5,
                   bytestring >= 0.10 && < 0.11,
                   filepath >= 1.3 && < 1.5,
                   hashable >= 1.2 && < 1.3,
                   mtl >= 2.1 && < 2.3,
                   resourcet >= 1.1 && < 1.2,
                   text >= 1.1 && < 1.3,
                   time >= 1.4 && < 1.7,
                   transformers >= 0.3 && < 0.6,
                   transformers-base >= 0.4,
                   vector >= 0.10 && < 0.12
  hs-source-dirs:  src
  c-sources:       cbits/utils.c,
                   cbits/visitors.c,
                   cbits/wrappers.c
  include-dirs:    cbits
  exposed-modules: Clang,
                   Clang.Comment,
                   Clang.Completion,
                   Clang.Cursor,
                   Clang.Debug,
                   Clang.Diagnostic,
                   Clang.File,
                   Clang.Location,
                   Clang.Index,
                   Clang.Module,
                   Clang.Range,
                   Clang.Remapping,
                   Clang.String,
                   Clang.Token,
                   Clang.TranslationUnit,
                   Clang.Type,
                   Clang.UnsavedFile,
                   Clang.USR,
                   Clang.Version
  other-modules: Clang.Internal.BitFlags,
                 Clang.Internal.Comment,
                 Clang.Internal.Monad,
                 Clang.Internal.FFI,
                 Clang.Internal.FFIConstants
  default-language: Haskell2010
  pkgconfig-depends: ncurses
  extra-libraries: clang-3.8
